--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-notifications": "~0.16.1",
     "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
+    "formik": "^2.2.9",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-animatable": "^1.3.3",
@@ -40,7 +41,8 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
