--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-native-firebase/app": "^17.1.0",
+    "@react-native-firebase/messaging": "^17.1.0",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/drawer": "^6.5.7",
